# metang

./: .clang-format  .gitignore  .pre-commit-config.yaml  Makefile  Makefile.dev-tools  README.md  meson.build  meson.options
.github/workflows/: ci.yaml
docs/: README.md.template  man.md  metang.1
include/: alloc.h  arena.h  deque.h  generate.h  generator.h  meson.build  meta.h  metang.h  options.h  strbuf.h  strlib.h
src/: alloc.c  arena.c  deque.c  generate.c  meson.build  metang.c  options.c  strbuf.c  strings.c  strlib.c
src/data/: generator.c  strings.c
src/generators/: generate_c.c  generate_py.c
tests/: append.test  append_prepend.test  base.test  bitmask.test  leader.test  meson.build  override.test  pascal.test  prepend.test  preproc_guard.test  snake_casing.test  start_from.test  tag_case.test  tag_name.test
tests/enum/: append.test  base.test  direct_assignment.test  guard.test  lang_py.test  leader.test  prepend.test  start_from.test  tag_name.test
tests/help/: base.test
tests/mask/: base.test  guard.test  lang_py.test  leader.test  tag_name.test
tests/version/: base.test
tools/: gen_docs.py  meson.build  runtests.py  version.sh
